update dependencies + database url

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# Create free Postgres db: https://railway.app/new
-DATABASE_URL=
+DATABASE_URL=postgresql://postgres:13B*15gG4d-6EfcCG*d*4DcD6151BEa1@monorail.proxy.rlwy.net:34730/railway
 
 NEXTAUTH_URL=http://localhost:3000
 # Generate in terminal with command `openssl rand -hex 32`
