--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "^5.9.1",
     "@tremor/react": "3.10.1",
     "avvvatars-react": "0.4.2",
     "lucide-react": "0.291.0",
     "next": "14.0.1",
     "next-auth": "4.24.4",
+    "prisma": "^5.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -28,7 +29,6 @@
     "eslint": "8",
     "eslint-config-next": "14.0.1",
     "postcss": "8",
-    "prisma": "5.5.2",
     "tailwindcss": "3.3.0",
     "typescript": "5"
   }
